pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-duplicate-from.ub
factory: {
  state-moves: [
    { from: 'core.thing@resource.old', to: 'core.thing@resource.new' },
    { from: 'core.thing@resource.old', to: 'core.thing@resource.final' },
  ]
}
